Fix issue with tags being left aligned in Firefox

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -105,6 +105,7 @@ html[data-theme="dark"] .navbar-sidebar .header-github-link {
 
 .badge {
   border: none;
+  display: flow-root;
   font-size: 85%;
   line-height: 2;
   margin: 0.25rem 0 1rem 0;
